build: copier update

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -213,8 +213,11 @@ combine-as-imports = true
 
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["E402", "I001"]
+"scripts/*" = ["INP001"]
 
 [tool.pyright]
+venvPath = "."
+venv = ".venv"
 pythonVersion = "3.12"
 pythonPlatform = "All"
 typeCheckingMode = "basic"
