--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,8 +34,8 @@ keywords = []
 requires-python = ">=3.12"
 license = { file = "LICENSE" }
 dependencies = [
-
     # Only add below (Copier)
+    "upathtools>=0.6.5",
 ]
 
 [tool.uv]
